--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     </head>
 
     <body>
+
+        <!--Main Section-->
+
         <h1>Discover hidden places in the world around you</h1>
         <a><span class="link">Download Excursion (Coming soon!)</span></a>
+        <video autoplay muted loop><source src="resources/videos/excursion.mp4" type="video/mp4">Video Not Supported</video>
+
+        <!--First Supporting Section-->
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="./resources/images/camp.jpg" alt="Image of camp at sunset">
+        <img class="icon" src="resources/images/phone.png" alt="Iphone icon">
     </body>
 </html>
