--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
         <img src="./resources/images/camp.jpg" alt="Image of camp at sunset">
         <img class="icon" src="resources/images/phone.png" alt="Iphone icon">
+
+        <!--Second Supporting Section-->
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a><span class="link">Download Excursion (Coming soon!)</span></a>
+
+        <!--Footer-->
+        <footer>© Excursion</footer>
     </body>
 </html>
