Make final corrections

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <a><span class="link">Download Excursion (Coming soon!)</span></a>
 
         <!--Footer-->
-        <footer>© Excursion</footer>
+        <footer>
+            <p>© Excursion</p>
+        </footer>
     </body>
 </html>
